--- a/src/main/webapp/client/search.xhtml
+++ b/src/main/webapp/client/search.xhtml
@@ -77,6 +77,15 @@
 			<h:dataTable id="clientBeanPageItems" styleClass="data-table" value="#{clientBean.pageItems}" var="_item">
 				<h:column>
 					<f:facet name="header">
+						<h:outputText value="Name"/>
+					</f:facet>
+					<h:link outcome="/client/view">
+						<f:param name="id" value="#{_item.id}"/>
+						<h:outputText id="itemName" value="#{_item.name}"/>
+					</h:link>
+				</h:column>
+				<h:column>
+					<f:facet name="header">
 						<h:outputText value="City"/>
 					</f:facet>
 					<h:link outcome="/client/view">
